# COMP0173_cw2

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
reproduced_HEARTS/: .gitignore  model_training.ipynb  shap_lime_analysis.ipynb
reproduced_HEARTS/model_explainability/: SHAP_LIME_Analysis.py
reproduced_HEARTS/model_explainability/results/: sampled_data.csv  shap_results.csv
reproduced_HEARTS/replication/albertv2/: emissions.csv
reproduced_HEARTS/replication/results/: classification_report.csv
src/: combining.ipynb  stereotype_final.csv  stereotype_final_all_info.csv  stereotype_scored.csv  stereotype_test_all_info.csv
src/HEARTS/: emissions.csv  model_adaption.ipynb  model_training.ipynb  run_emissions.csv  training_emissions.csv  training_emissions_custom.csv
src/HEARTS/custom_albertv2/: config.json  emissions.csv
src/HEARTS/custom_results/: full_results.csv
src/dataset_gen/: all_results.json  filtered_stereotypes.csv  stereotype_indicators.csv  stereotypes.csv
src/dataset_gen/analysis_outputs_qwen2.5/: all_results_clean.json
src/dataset_gen/crows_pairs/: crows_pairs_comparison.ipynb  removed_crows_pairs.csv
src/dataset_gen/interim/: generated_statements_20251214_191921.csv  generated_statements_20251214_191921.json  missing_texts.txt  other_statements_text.csv  train_filtered_gender_lgbtq+_stereotype.csv  train_filtered_nationality_race_stereotype.csv  train_filtered_religion_stereotype.csv
src/dataset_gen/outputs/: .gitignore  all_results.json  compiled_results.json  compiled_results_backup.json
src/dataset_gen/scripts/: 001_stereotype_detection.py  check_csv.py  clean_and_reprocess.py  get_prompts.py  i_i_stereotype_detection.py  i_ii_extract_mismatched_outputs.ipynb  i_iii_comparison_filter.ipynb  ii_i_generate_linguistic_indicators.py  ii_ii_check_results.ipynb  process_missing.py  prompt.py  verify_results.py
src/gen_dataset/: emgsd.ipynb  final_statements.csv  get_prompts.py  models.py  process_prompts.ipynb  prompts.py  themes.py
src/gen_dataset/outputs/: bbq_statements.pkl  generated_statements.csv  statements_australian_irish_russian.pkl  statements_black_community.pkl  statements_chinese_community.pkl  statements_chinese_tourists.pkl  statements_eastern_european_community_2.pkl  statements_french_community.pkl  statements_men.pkl  (+24 more)
src/model_explainability/: shap_lime_analysis_custom_ds.ipynb
src/quantifying_stereotypes/: i_bws_score.ipynb  ii_train_lr_model.ipynb  iii_scsc_scoring.ipynb  iv_roberta_comparison.ipynb  scoring.ipynb  stereotype_predict.csv  stereotype_predict_scored.csv  stereotype_scsc.csv  stereotype_train.csv  stereotype_train_scored.csv
(+31 files in other folders)
